# rustgpt

./: .gitignore  Cargo.toml  PROJECT_CONVENTIONS.md  README.md  justfile  package-lock.json  package.json  tailwind.config.js
src/: main.rs  middleware.rs  project_middleware.rs
src/DOCs and explanations/: NaiveGateTime.md  axxum.md
src/Error/: mod.rs
src/ai/: stream.rs
src/ai_layer/: stream.rs
src/model/: app_state.rs  constant.rs  db_type.rs  error.rs  mod.rs  model.rs  project_error.rs  repository.rs  user.rs  user_dto.rs
src/router/: mod.rs
src/router/app/: app_router.rs  auth.rs  blog.rs  chat.rs  error.rs  home.rs  mod.rs  settings.rs
templates/components/: footer.html  header.html
templates/views/: blog.html  chat.html  error.html  home.html  login.html  main.html  settings.html
