[package]
name = "rust_chat_AI"
version = "0.1.2"
edition = "2021"
# links = "sqlite3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Details of versioning rules https://semver.org/
#
[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
axum-server = "0.7.1"
# https://crates.io/crates/bcrypt
bcrypt ="0.16.0"
chrono = { version = "^0.4.39", features = ["serde"] }
comrak = "0.32.0"
dotenv = "0.15.0"
futures = "0.3.29"
hyper = "1.5.1"
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
reqwest = { version = "0.12.9", features = ["json"] }
reqwest-eventsource = "0.6.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["chrono", "json", "runtime-async-std-native-tls", "runtime-tokio", "sqlite"] }
sqlx-migrate = "^0.7.1"
tera = "1.19.1"
time = ">= 0.3.35"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tower-cookies = "0.10.0"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }

[profile.release]
opt-level = 3
lto = true
rpath = false
incremental = true
overflow-checks = false
strip = "symbols"

[build]
rustflags = ["--cfg", "tracing_unstable"]
